# covidjellyfish

./: .dockerignore  .gitignore  Brewfile  CMakeLists.txt  Dockerfile
.github/actions/: release.yaml
src/: query_parameters.hpp  query_per_sequence.cc  sequence_mers.hpp
